docs - design part 번역 완료

--- a/@docs-md/document/4_design/3.md
+++ b/@docs-md/document/4_design/3.md
@@ -1,14 +1,19 @@
-# Flexbox를 사용한 레이아웃
+# Flexbox를 이용한 레이아웃
+
 컴포넌트는 Flexbox 알고리즘을 사용해 자식의 레이아웃을 지정할 수 있습니다. Flexbox는 다양한 화면 크기에서 일관된 레이아웃을 제공하도록 설계되었습니다. 
 
-일반적으로 `flexDirection`, `alignItems` 및 `justifyContent`의 조합을 사용해 올바른 레이아웃을 얻을 수 있습니다. 
+일반적으로 `flexDirection`, `alignItems` 및 `justifyContent`의 조합을 사용해 맞는 레이아웃을 얻을 수 있습니다. 
+
 > Flexbox는 웹에서의 CSS와 같은 방식으로 동작합니다. 기본 값은 다른데, `flexDirection`은 `row` 대신 `column`을 기본값으로 가지며, `alignContent`는 `stretch` 대신 `flex-start`를 기본값으로 합니다. `flexShrink`는 `1` 대신 `0`을 기본값으로 가지며, `flex` 매개변수는 단일 숫자만 지원합니다. 
 
 ## Flex
-[`flex`](https://reactnative.dev/docs/layout-props#flex)는 아이템들이 주축(main axis)을 따라 사용 가능한 공간을 어떻게 "채울지"를 정의합니다. 공간은 각 엘리먼트의 flex 속성에 따라 분배됩니다. 
+
+[`flex`](https://reactnative.dev/docs/layout-props#flex)이템들이 주축(main axis)을 따라 사용 가능한 공간을 어떻게 "채울지"를 정의합니다. 공간은 각 엘리먼트의 flex 속성에 따라 분배됩니다. I
 
 다음 예제에서, 빨간색, 노란색, 초록색 뷰는 모두 `flex: 1`로 설정된 컨테이너 뷰의 자식 뷰입니다. 빨간색 뷰는 `flex: 1`을 사용하고, 노란색 뷰는 `flex: 2`, 초록색 뷰는 `flex: 3`을 사용합니다. **1+2+3 = 6**, 이는 빨간색 뷰가 공간의 6분의 1을 차지하고, 노란색 뷰가 6분의 2를, 초록색 뷰가 6분의 3을 차지한다는 것을 의미합니다.  
-**Flex Example**
+
+#### Flex 예제
+
 ```jsx
 import React from "react";
 import { StyleSheet, Text, View } from "react-native";
@@ -36,16 +41,20 @@ const styles = StyleSheet.create({
 export default Flex;
 ```
 
-# Flex Direction
 [`flexDirection`]은 노드의 자식들이 배치될 방향을 결정합니다. 이를 주축(main axis)이라고도 합니다. 교차 축(cross axis)은 주축에 수직인 축, 또는 줄 바꿈이 배치되는 축입니다. 
+
 - `column` (**기본값**) 자식을 위에서 아래로 정렬합니다. 줄 바꿈이 활성화 된 경우, 다음 줄은 컨테이너 상단의 첫 번째 항목 오른쪽에서 시작됩니다. 
+
 - `row` 자식을 왼쪽에서 오른쪽으로 정렬합니다. 줄 바꿈이 활성화 된 경우, 다음 줄은 컨테이너 왼쪽의 첫 번째 항목 아래에서 시작됩니다.  
+
 - `column-reverse` 자식을 아래에서 위로 정렬합니다. 줄 바꿈이 활성화 된 경우, 다음 줄은 컨테이너 하단의 첫 번째 항목 오른쪽에서 시작됩니다.  
+
 - `row-reverse` 자식을 오른쪽에서 왼쪽으로 정렬합니다. 줄 바꿈이 활성화 된 경우, 컨테이너 오른쪽의 첫 번째 항목 아래에서 다음 줄이 시작됩니다.  
 
 [여기](https://yogalayout.com/docs/flex-direction)에서 자세히 알아볼 수 있습니다. 
 
-**Flex Direction**
+#### Flex Direction
+
 ```jsx
 import React, { useState } from "react";
 import { StyleSheet, Text, TouchableOpacity, View } from "react-native";
@@ -157,11 +166,14 @@ export default FlexDirectionBasics;
 ```
 
 ## Layout Direction
-Layout direction은 계층 구조에서 자식과 텍스트가 배치되어야 하는 방향을 지정합니다. Layout direction은 `start`와 `end`가 어느 쪽을 나타내는지에 대해서도 영향을 줍니다. 기본적으로 React Native는 LTR(Left to Right, 왼쪽에서 오른쪽) 방향으로 배치됩니다. LTR 모드에서 `start`는 왼쪽을 의미하고 `end`는 오른쪽을 의미합니다.  
-- `LTR` (**기본값**) 텍스트와 자식이 왼쪽에서 오른쪽으로 배치됩니다. 엘리먼트의 시작 부분에 적용된 Margin과 padding은 오른쪽에 적용됩니다.  
-- `RTL` 텍스트와 자식이 오른쪽에서 왼쪽으로 배치됩니다. 엘리먼트의 시작 부분에 적용된 Margin과 padding은 오른쪽에 적용됩니다.  
 
-**Flex Direction**
+Layout direction은 계층 구조에서 자식과 텍스트가 배치되어야 하는 방향을 지정합니다. Layout direction은 `start`와 `end`가 어느 쪽을 나타내는지에 대해서도 영향을 줍니다. 기본적으로 React Native는 LTR(Left to Right, 왼쪽에서 오른쪽) 방향으로 배치됩니다. LTR 모드에서 `start`는 왼쪽을 의미하고 `end`는 오른쪽을 의미합니다.
+
+- `LTR` (**기본값**) 텍스트와 자식이 왼쪽에서 오른쪽으로 배치됩니다. 엘리먼트의 시작 부분에 적용된 Margin과 padding은 오른쪽에 적용됩니다.
+- `RTL` 텍스트와 자식이 오른쪽에서 왼쪽으로 배치됩니다. 엘리먼트의 시작 부분에 적용된 Margin과 padding은 오른쪽에 적용됩니다.
+
+#### Flex Direction
+
 ```jsx
 import React, { useState } from "react";
 import { View, TouchableOpacity, Text, StyleSheet } from "react-native";
@@ -272,17 +284,20 @@ export default DirectionLayout;
 ```
 
 ## Justify Content
-[`justifyContent`](https://reactnative.dev/docs/layout-props#justifycontent)는 컨테이너의 주축 안에서 아이템들이 어떻게 정렬될지를 정의합니다. 예를 들어, `flexDirection`을 `row`로 설정한 상태에서 이 속성을 center로 설정해 컨테이너 안의 아이템을 수평으로 정렬할 수 있습니다. 또는 `flexDirection`을 `column`으로 설정해서 컨테이너 안의 아이템을 수직으로 정렬할 수도 있습니다. 
-- `flex-start` (**기본값**) 컨테이너의 아이템들을 컨테이너의 주축이 시작하는 지점으로 정렬합니다. 
-- `flex-end` 컨테이너의 아이템들을 컨테이너의 주축이 끝나는 지점으로 정렬합니다.  
-- `center` 컨테이너의 아이템들을 컨테이너 주축의 중앙으로 정렬합니다.  
-- `space-between` 컨테이너의 주축을 따라 아이템 간에 균등한 간격을 두고, 남은 공간들을 아이템 사이에 분배합니다. 
-- `space-around` 컨테이너의 주축을 따라 아이템 간에 균등한 간격을 두고, 남은 공간을 아이템 주위에 분배합니다. `space-between`과 비교했을 때, `space-around`를 사용하면 공간이 첫 번째 자식과 마지막 자식 사이에 분배됩니다. 
-- `space-evenly` 주축을 따라 정렬 컨테이너 내에서 아이템을 균등하게 배치합니다. 인접한 아이템 쌍 사이의 공간, 주축 끝과 첫 번째 아이템 사이의 공간, 그리고 주축 끝과 마지막 아이템 사이의 공간이 모두 정확히 같습니다.  
 
-[여기](https://yogalayout.com/docs/justify-content)에서 더 자세히 알아볼 수 있습니다. 
+[`justifyContent`](https://reactnative.dev/docs/layout-props#justifycontent)는 컨테이너의 주축 안에서 아이템들이 어떻게 정렬될지를 정의합니다. 예를 들어, `flexDirection`을 `row`로 설정한 상태에서 이 속성을 center로 설정해 컨테이너 안의 아이템을 수평으로 정렬할 수 있습니다. 또는 `flexDirection`을 `column`으로 설정해서 컨테이너 안의 아이템을 수직으로 정렬할 수도 있습니다.
 
-**Justify Content**
+- `flex-start` (**기본값**) 컨테이너의 아이템들을 컨테이너의 주축이 시작하는 지점으로 정렬합니다.
+- `flex-end` 컨테이너의 아이템들을 컨테이너의 주축이 끝나는 지점으로 정렬합니다.
+- `center` 컨테이너의 아이템들을 컨테이너 주축의 중앙으로 정렬합니다.
+- `space-between` 컨테이너의 주축을 따라 아이템 간에 균등한 간격을 두고, 남은 공간들을 아이템 사이에 분배합니다.
+- `space-around` 컨테이너의 주축을 따라 아이템 간에 균등한 간격을 두고, 남은 공간을 아이템 주위에 분배합니다. `space-between`과 비교했을 때, `space-around`를 사용하면 공간이 첫 번째 자식과 마지막 자식 사이에 분배됩니다.
+- `space-evenly` 주축을 따라 정렬 컨테이너 내에서 아이템을 균등하게 배치합니다. 인접한 아이템 쌍 사이의 공간, 주축 끝과 첫 번째 아이템 사이의 공간, 그리고 주축 끝과 마지막 아이템 사이의 공간이 모두 정확히 같습니다.
+
+[여기](https://yogalayout.com/docs/justify-content)에서 더 자세히 알아볼 수 있습니다.
+
+#### Justify Content
+
 ```jsx
 import React, { useState } from "react";
 import { View, TouchableOpacity, Text, StyleSheet } from "react-native";
@@ -398,18 +413,19 @@ export default JustifyContentBasics;
 ```
 
 ## Align Items
-[`alignItems`]는 컨테이너의 교차 축을 따라 아이템들이 어떻게 정렬될지를 정의합니다. Align Item은 `justifyContent`와 매우 비슷하지만, 주축 대신에 교차축에 적용됩니다. 
 
-- `stretch` (**기본값**) 컨테이너의 아이템들을 컨테이너 교차 축 높이에 맞춰 늘립니다.  
-- `flex-start` 컨테이너의 아이템들을 컨테이너 교차 축의 시작점에 정렬합니다. 
-- `flex-end` 컨테이너의 아이템들을 컨테이너 교차 축의 끝점에 정렬합니다. 
-- `center` 컨테이너의 아이템들을 컨테이너 교차 축의 중앙에 정렬합니다.  
-- `baseline` 컨테이너의 아이템들을 공통 기준선에 따라 정렬합니다. 개별 아이템을 컨테이너의 기준선으로 설정할 수 있습니다. 
+`alignItems` 는 컨테이너의 교차 축을 따라 아이템들이 어떻게 정렬될지를 정의합니다. Align Items는 `justifyContent` 와 매우 비슷하지만, 주축 대신에 교차축에 적용됩니다.
+
+- `stretch` (**기본값**) 컨테이너의 아이템들을 컨테이너 교차 축 높이에 맞춰 늘립니다.
+- `flex-start` 컨테이너의 아이템들을 컨테이너 교차 축의 시작점에 정렬합니다.
+- `flex-end` 컨테이너의 아이템들을 컨테이너 교차 축의 끝점에 정렬합니다.
+- `center` 컨테이너의 아이템들을 컨테이너 교차 축의 중앙에 정렬합니다.
+- `baseline` 컨테이너의 아이템들을 공통 기준선에 따라 정렬합니다. 개별 아이템을 컨테이너의 기준선으로 설정할 수 있습니다.
+
 > `stretch`가 적용되려면 아이템들이 하위 축을 따라 고정된 사이즈를 갖지 않아야 합니다. 다음 예제에서, `alignItems: stretch` 설정은 자식의 `width: 50`이 제거될 때까지 아무 효력을 발휘하지 못합니다.
 
-[여기](https://yogalayout.com/docs/align-items)에서 자세히 알아볼 수 있습니다.
+Align Items
 
-**Align Items**
 ```jsx
 import React, { useState } from "react";
 import {
@@ -546,9 +562,11 @@ export default AlignItemsLayout;
 ```
 
 ## Align Self
-[`alignSelf`]는 `alignItems`와 같은 옵션과 효과를 가지고 있는데, 컨테이너 안의 아이템 대신에, 하나의 자식에 이 속성을 적용해 부모 안에서의 정렬을 변경할 수 있습니다. `alignSelf`는 부모에 설정된 모든 `alginItems` 옵션을 덮어씌웁니다. 
 
-**Align Self**
+`alignSelf` 는 `alignItems` 와 같은 옵션과 효과를 가지고 있는데, 컨테이너 안의 아이템 대신에, 하나의 자식에 이 속성을 적용해 부모 안에서의 정렬을 변경할 수 있습니다. `alignSelf`는 부모에 설정된 모든 `alginItems` 옵션을 덮어씌웁니다.
+
+#### Align Self
+
 ```jsx
 import React, { useState } from "react";
 import { View, TouchableOpacity, Text, StyleSheet } from "react-native";
@@ -666,17 +684,20 @@ export default AlignSelfLayout;
 ```
 
 ## Align Content
-[`alignContent`]는 교차 축을 따라 라인을 어떻게 배치할지 정의합니다. 이 속성은 아이템들이 `flexWrap`을 사용해 여러 줄로 감싸져 있을 때만 적용됩니다. 
-- `flex-start` (**기본값**) 줄바꿈 된 라인을 컨테이너의 교차 축 시작 지점에 정렬합니다. 
-- `flex-end` 줄바꿈 된 라인을 컨테이너의 교차 축 끝 지점에 정렬합니다.  
-- `stretch` (웹에서 Yoga를 사용할 때의 기본값) 줄바꿈 된 라인을 컨테이너 교차 축의 높이에 맞게 늘립니다. 
-- `center` 줄바꿈 된 라인을 컨테이너 교차 축의 중앙에 정렬합니다.  
-- `space-between` 컨테이너의 교차 축을 가로질러 줄바꿈 된 라인의 간격을 균등하게 유지하고, 라인 사이에 나머지 공간을 분배합니다.  
-- `space-around` 컨테이너의 교차 축을 가로질러 줄바꿈 된 라인을 균등하게 배치하고, 라인 주위에 나머지 공간을 분배합니다. `space-between`과 비교했을 때, `space-around`를 사용하면 공간이 첫 번째 줄과 마지막 줄 사이에 분배됩니다.  
 
-[여기](https://yogalayout.com/docs/align-content)에서 자세히 알아볼 수 있습니다. 
+`alignContent`는 교차 축을 따라 라인을 어떻게 배치할지 정의합니다. 이 속성은 아이템들이 `flexWrap`을 사용해 여러 줄로 감싸져 있을 때만 적용됩니다.
 
-**Align Content**
+- `flex-start` (**기본값**) 줄바꿈 된 라인을 컨테이너의 교차 축 시작 지점에 정렬합니다.
+- `flex-end` 줄바꿈 된 라인을 컨테이너의 교차 축 끝 지점에 정렬합니다.
+- `stretch` (웹에서 Yoga를 사용할 때의 기본값) 줄바꿈 된 라인을 컨테이너 교차 축의 높이에 맞게 늘립니다.
+- `center` 줄바꿈 된 라인을 컨테이너 교차 축의 중앙에 정렬합니다.
+- `space-between` 컨테이너의 교차 축을 가로질러 줄바꿈 된 라인의 간격을 균등하게 유지하고, 라인 사이에 나머지 공간을 분배합니다.
+- `space-around` 컨테이너의 교차 축을 가로질러 줄바꿈 된 라인을 균등하게 배치하고, 라인 주위에 나머지 공간을 분배합니다. `space-between`과 비교했을 때, `space-around`를 사용하면 공간이 첫 번째 줄과 마지막 줄 사이에 분배됩니다.
+
+[여기](https://yogalayout.com/docs/align-content)에서 자세히 알아볼 수 있습니다.
+
+#### Align Content
+
 ```jsx
 import React, { useState } from "react";
 import { View, TouchableOpacity, Text, StyleSheet } from "react-native";
@@ -814,11 +835,13 @@ export default AlignContentLayout;
 ```
 
 ## Flex Wrap
-[`flexWrap`] 속성은 컨테이너에 설정되며, 자식들이 주축을 따라 컨테이너의 크기를 초과할 때 발생하는 상황을 제어합니다. 기본값으로, 자식들은 한 줄로 강제됩니다 (엘리먼트가 축소될 수 있음). 줄 바꿈이 허용되는 경우, 아이템들은 필요한 경우 주축을 따라 여러 줄로 줄 바꿈됩니다.  
+
+`flexWrap` 속성은 컨테이너에 설정되며, 자식들이 주축을 따라 컨테이너의 크기를 초과할 때 발생하는 상황을 제어합니다. 기본값으로, 자식들은 한 줄로 강제됩니다 (엘리먼트가 축소될 수 있음). 줄 바꿈이 허용되는 경우, 아이템들은 필요한 경우 주축을 따라 여러 줄로 줄 바꿈됩니다.
 
 줄 바꿈 시 `alignContent`는 컨테이너에서 줄이 배치되는 방법을 지정하는 데 사용할 수 있습니다. [여기](https://yogalayout.com/docs/flex-wrap)에서 자세히 알아보세요.
 
-**Flex Wrap**
+#### Flex Wrap
+
 ```jsx
 import React, { useState } from "react";
 import { View, TouchableOpacity, Text, StyleSheet } from "react-native";
@@ -943,8 +966,551 @@ const styles = StyleSheet.create({
   },
 });
 
-export default FlexWrapLayout;
+export default FlexWrapLayout;     
 ```
 
-## Flex Basis, Grow, and Shrink
-- `flexBasis`는 메인 축을 따라 아이템의 기본 사이즈를 제공하며, 축과 독립된 방식입니다. 자식 요소의 `flexBasis`를 설정하는 것은 
+## Flex Basis, Grow, Shrink
+
+- `FlexBasis` 는 주축을 따라 아이템의 기본 사이즈를 제공하며, 축 독립적인 방식입니다. 자식의 `flexBasis` 를 설정하는 것은 부모가 `flexDirection: row` 일 때 해당 자식의 `width` 를 설정하는 것과 비슷하고, 부모가 `flexDirection: column` 일 때는 해당 자식의 `height` 를 설정하는 것과 비슷합니다. 아이템의 `flexBasis` 는 아이템에 `flexGrow` 와 `flexShrink` 연산이 수행되기 전의 기본 사이즈입니다. 
+
+- `flexGrow` 는 주축을 따라 자식들 간에 컨테이너 내부의 공간을 어떻게 분배할지를 결정합니다. 컨테이너는 자식들을 배치한 후에 남은 공간을 자식들에게 지정된 flex grow 값에 따라 분배합니다. 
+
+  `flexGrow` 는 0 이상의 모든 부동 소수점 값을 허용하며, 기본값은 0입니다. 컨테이너는 자식들의 `flexGrow` 값으로 가중치를 부여해 남은 공간을 분배합니다. 
+
+- `flexShrink` 는 자식들의 총 크기가 주축 상에서 컨테이너의 크기를 초과하는 경우, 주축을 따라 자식들을 어떻게 축소할지를 설정합니다. `flexShrink` 는 `flexGrow` 와 매우 유사하며, `flexGrow` 에서의 남는 크기 = - (`flexShrink` 에서의 초과하는 크기) 라고 생각할 수 있습니다. 또한 이 두 가지 속성은 자식들이 필요에 따라 확장되거나 축소되도록 허용함으로써 같이 잘 작동될 수 있습니다. 
+
+  `flexShrink` accepts any floating point value >= 0, with 0 being the default value (on the web, the default is 1). A container will shrink its children weighted by the children’s `flexShrink` values.
+
+  `flexShrink` 는 0 이상의 모든 부동 소수점 값을 허용하며, 기본값은 0입니다. (웹에서 기본값은 1). 컨테이너는 자식들의 `flexShrink` 값에 따라 가중치를 부여해 자식들을 축소시킵니다. 
+
+[여기](https://yogalayout.com/docs/flex)에서 자세히 알아보세요. 
+
+#### Flex Basis, Grow, and Shrink
+
+```jsx
+import React, { useState } from "react";
+import {
+  View,
+  Text,
+  TextInput,
+  StyleSheet,
+} from "react-native";
+
+const App = () => {
+  const [powderblue, setPowderblue] = useState({
+    flexGrow: 0,
+    flexShrink: 1,
+    flexBasis: "auto",
+  });
+  const [skyblue, setSkyblue] = useState({
+    flexGrow: 1,
+    flexShrink: 0,
+    flexBasis: 100,
+  });
+  const [steelblue, setSteelblue] = useState({
+    flexGrow: 0,
+    flexShrink: 1,
+    flexBasis: 200,
+  });
+  return (
+    <View style={styles.container}>
+      <View
+        style={[
+          styles.container,
+          {
+            flexDirection: "row",
+            alignContent: "space-between",
+          },
+        ]}
+      >
+        <BoxInfo
+          color="powderblue"
+          {...powderblue}
+          setStyle={setPowderblue}
+        />
+        <BoxInfo
+          color="skyblue"
+          {...skyblue}
+          setStyle={setSkyblue}
+        />
+        <BoxInfo
+          color="steelblue"
+          {...steelblue}
+          setStyle={setSteelblue}
+        />
+      </View>
+      <View style={styles.previewContainer}>
+        <View
+          style={[
+            styles.box,
+            {
+              flexBasis: powderblue.flexBasis,
+              flexGrow: powderblue.flexGrow,
+              flexShrink: powderblue.flexShrink,
+              backgroundColor: "powderblue",
+            },
+          ]}
+        />
+        <View
+          style={[
+            styles.box,
+            {
+              flexBasis: skyblue.flexBasis,
+              flexGrow: skyblue.flexGrow,
+              flexShrink: skyblue.flexShrink,
+              backgroundColor: "skyblue",
+            },
+          ]}
+        />
+        <View
+          style={[
+            styles.box,
+            {
+              flexBasis: steelblue.flexBasis,
+              flexGrow: steelblue.flexGrow,
+              flexShrink: steelblue.flexShrink,
+              backgroundColor: "steelblue",
+            },
+          ]}
+        />
+      </View>
+    </View>
+  );
+};
+
+const BoxInfo = ({
+  color,
+  flexBasis,
+  flexShrink,
+  setStyle,
+  flexGrow,
+}) => (
+  <View style={[styles.row, { flexDirection: "column" }]}>
+    <View
+      style={[
+        styles.boxLabel,
+        {
+          backgroundColor: color,
+        },
+      ]}
+    >
+      <Text
+        style={{
+          color: "#fff",
+          fontWeight: 500,
+          textAlign: "center",
+        }}
+      >
+        Box
+      </Text>
+    </View>
+    <Text style={styles.label}>flexBasis</Text>
+    <TextInput
+      value={flexBasis}
+      style={styles.input}
+      onChangeText={(fB) =>
+        setStyle((value) => ({
+          ...value,
+          flexBasis: isNaN(parseInt(fB))
+            ? "auto"
+            : parseInt(fB),
+        }))
+      }
+    />
+    <Text style={styles.label}>flexShrink</Text>
+    <TextInput
+      value={flexShrink}
+      style={styles.input}
+      onChangeText={(fS) =>
+        setStyle((value) => ({
+          ...value,
+          flexShrink: isNaN(parseInt(fS))
+            ? ""
+            : parseInt(fS),
+        }))
+      }
+    />
+    <Text style={styles.label}>flexGrow</Text>
+    <TextInput
+      value={flexGrow}
+      style={styles.input}
+      onChangeText={(fG) =>
+        setStyle((value) => ({
+          ...value,
+          flexGrow: isNaN(parseInt(fG))
+            ? ""
+            : parseInt(fG),
+        }))
+      }
+    />
+  </View>
+);
+
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+    paddingHorizontal: 10,
+  },
+  box: {
+    flex: 1,
+    height: 50,
+    width: 50,
+  },
+  boxLabel: {
+    minWidth: 80,
+    padding: 8,
+    borderRadius: 4,
+    marginTop: 8,
+  },
+  label: {
+    marginTop: 6,
+    fontSize: 16,
+    fontWeight: "100",
+  },
+  previewContainer: {
+    flex: 1,
+    flexDirection: "row",
+    backgroundColor: "aliceblue",
+  },
+  row: {
+    flex: 1,
+    flexDirection: "row",
+    flexWrap: "wrap",
+    alignItems: "center",
+    marginBottom: 10,
+  },
+  input: {
+    borderBottomWidth: 1,
+    paddingVertical: 3,
+    width: 50,
+    textAlign: "center",
+  },
+});
+
+export default App;
+```
+
+## Width와 Height
+
+`width` 속성은 엘리먼트 컨텐츠 영역의 너비를 지정합니다. 마찬가지로 `height` 속성은 엘리먼트 컨텐츠 영역의 높이를 지정합니다. 
+
+Both `width` and `height` can take the following values:
+
+`widht` 와 `height` 모두 다음의 값들을 가질 수 있습니다. 
+
+- `auto` (**기본값**) React Native가 다른 자식들, 텍스트, 이미지 등 컨텐츠에 따라 엘리먼트의 너비/높이를 계산합니다.  
+- `pixels` Defines the width/height in absolute pixels. Depending on other styles set on the component, this may or may not be the final dimension of the node.
+- `pixels` 는 너비/높이를 고정 픽셀 단위로 정의합니다. 컴포넌트에 설정된 다른 스타일들에 따라 최종 치수가 될 수도 있고 아닐 수도 있습니다. 
+- `percentage` 는 너비나 높이를 부모의 너비나 높이 각각에 대한 퍼센트로 정의합니다. 
+
+#### Width and Height
+
+```jsx
+import React, { useState } from "react";
+import {
+  View,
+  SafeAreaView,
+  TouchableOpacity,
+  Text,
+  StyleSheet,
+} from "react-native";
+
+const WidthHeightBasics = () => {
+  const [widthType, setWidthType] = useState("auto");
+  const [heightType, setHeightType] = useState("auto");
+
+  return (
+    <PreviewLayout
+      widthType={widthType}
+      heightType={heightType}
+      widthValues={["auto", 300, "80%"]}
+      heightValues={["auto", 200, "60%"]}
+      setWidthType={setWidthType}
+      setHeightType={setHeightType}
+    >
+      <View
+        style={{
+          alignSelf: "flex-start",
+          backgroundColor: "aliceblue",
+          height: heightType,
+          width: widthType,
+          padding: 15,
+        }}
+      >
+        <View
+          style={[
+            styles.box,
+            { backgroundColor: "powderblue" },
+          ]}
+        />
+        <View
+          style={[
+            styles.box,
+            { backgroundColor: "skyblue" },
+          ]}
+        />
+        <View
+          style={[
+            styles.box,
+            { backgroundColor: "steelblue" },
+          ]}
+        />
+      </View>
+    </PreviewLayout>
+  );
+};
+
+const PreviewLayout = ({
+  children,
+  widthType,
+  heightType,
+  widthValues,
+  heightValues,
+  setWidthType,
+  setHeightType,
+}) => (
+  <View style={{ flex: 1, padding: 10 }}>
+    <View style={styles.row}>
+      <Text style={styles.label}>width </Text>
+      {widthValues.map((value) => (
+        <TouchableOpacity
+          key={value}
+          onPress={() => setWidthType(value)}
+          style={[
+            styles.button,
+            widthType === value && styles.selected,
+          ]}
+        >
+          <Text
+            style={[
+              styles.buttonLabel,
+              widthType === value && styles.selectedLabel,
+            ]}
+          >
+            {value}
+          </Text>
+        </TouchableOpacity>
+      ))}
+    </View>
+    <View style={styles.row}>
+      <Text style={styles.label}>height </Text>
+      {heightValues.map((value) => (
+        <TouchableOpacity
+          key={value}
+          onPress={() => setHeightType(value)}
+          style={[
+            styles.button,
+            heightType === value && styles.selected,
+          ]}
+        >
+          <Text
+            style={[
+              styles.buttonLabel,
+              heightType === value && styles.selectedLabel,
+            ]}
+          >
+            {value}
+          </Text>
+        </TouchableOpacity>
+      ))}
+    </View>
+    {children}
+  </View>
+);
+
+const styles = StyleSheet.create({
+  box: {
+    width: 50,
+    height: 50,
+  },
+  row: {
+    flexDirection: "row",
+    flexWrap: "wrap",
+  },
+  button: {
+    padding: 8,
+    borderRadius: 4,
+    backgroundColor: "oldlace",
+    alignSelf: "flex-start",
+    marginRight: 10,
+    marginBottom: 10,
+  },
+  selected: {
+    backgroundColor: "coral",
+    shadowOpacity: 0,
+    borderWidth: 0,
+  },
+  buttonLabel: {
+    fontSize: 12,
+    fontWeight: "500",
+    color: "coral",
+  },
+  selectedLabel: {
+    color: "white",
+  },
+  label: {
+    textAlign: "center",
+    marginBottom: 10,
+    fontSize: 24,
+  },
+});
+
+export default WidthHeightBasics;
+```
+
+## Absolute & Relative Layout
+
+엘리먼트의 `position` 타입은 부모 내부에서 해당 엘리먼트가 어떻게 위치해야할지를 정의합니다. 
+
+- `relative` (**기본값**) 엘리먼트는 기본적으로 상대적으로 배치됩니다. 이는 엘리먼트가 레이아웃의 정상적인 흐름에 따라 배치되었다가, `top`, `right`, `bottom`, `left` 값에 따라 해당 위치를 벗어나게 되는 것을 의미합니다. 이러한 위치 변화(offset)는 형제 또는 부모 요소에 영향을 미치지 않습니다. 
+- `absolute` 절대적인 위치로 배치되었을 때, 엘리먼트는 일반적인 레이아웃 흐름에 관여하지 않고 형제 요소들과 독립적으로 배치되며, `top`, `right`, `bottom`, `left` 값에 따라 위치가 결정됩니다. 
+
+#### Absolute
+
+```jsx
+import React, { useState } from "react";
+import {
+  View,
+  SafeAreaView,
+  TouchableOpacity,
+  Text,
+  StyleSheet,
+} from "react-native";
+
+const PositionLayout = () => {
+  const [position, setPosition] = useState("relative");
+
+  return (
+    <PreviewLayout
+      label="position"
+      selectedValue={position}
+      values={["relative", "absolute"]}
+      setSelectedValue={setPosition}
+    >
+      <View
+        style={[
+          styles.box,
+          {
+            top: 25,
+            left: 25,
+            position,
+            backgroundColor: "powderblue",
+          },
+        ]}
+      />
+      <View
+        style={[
+          styles.box,
+          {
+            top: 50,
+            left: 50,
+            position,
+            backgroundColor: "skyblue",
+          },
+        ]}
+      />
+      <View
+        style={[
+          styles.box,
+          {
+            top: 75,
+            left: 75,
+            position,
+            backgroundColor: "steelblue",
+          },
+        ]}
+      />
+    </PreviewLayout>
+  );
+};
+
+const PreviewLayout = ({
+  label,
+  children,
+  values,
+  selectedValue,
+  setSelectedValue,
+}) => (
+  <View style={{ padding: 10, flex: 1 }}>
+    <Text style={styles.label}>{label}</Text>
+    <View style={styles.row}>
+      {values.map((value) => (
+        <TouchableOpacity
+          key={value}
+          onPress={() => setSelectedValue(value)}
+          style={[
+            styles.button,
+            selectedValue === value && styles.selected,
+          ]}
+        >
+          <Text
+            style={[
+              styles.buttonLabel,
+              selectedValue === value &&
+                styles.selectedLabel,
+            ]}
+          >
+            {value}
+          </Text>
+        </TouchableOpacity>
+      ))}
+    </View>
+    <View style={styles.container}>{children}</View>
+  </View>
+);
+
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+    marginTop: 8,
+    backgroundColor: "aliceblue",
+    minHeight: 200,
+  },
+  box: {
+    width: 50,
+    height: 50,
+  },
+  row: {
+    flexDirection: "row",
+    flexWrap: "wrap",
+  },
+  button: {
+    paddingHorizontal: 8,
+    paddingVertical: 6,
+    borderRadius: 4,
+    backgroundColor: "oldlace",
+    alignSelf: "flex-start",
+    marginHorizontal: "1%",
+    marginBottom: 6,
+    minWidth: "48%",
+    textAlign: "center",
+  },
+  selected: {
+    backgroundColor: "coral",
+    borderWidth: 0,
+  },
+  buttonLabel: {
+    fontSize: 12,
+    fontWeight: "500",
+    color: "coral",
+  },
+  selectedLabel: {
+    color: "white",
+  },
+  label: {
+    textAlign: "center",
+    marginBottom: 10,
+    fontSize: 24,
+  },
+});
+
+export default PositionLayout;
+```
+
+## 더 알아보기
+
+flexbox에 대해 더 알아보려면, 반응형 [yoga playground](https://yogalayout.com/playground) 를 확인해보세요. 
+
+여기에서는 기초만 다뤘지만, 레이아웃에 필요할 수도 있는 다른 많은 스타일들이 존재합니다. 레이아웃을 제어하는 props의 전체 리스트는 [여기](https://reactnative.dev/docs/layout-props) 에 문서화되어 있습니다. 
+
+또한 [Wix Engineers](https://medium.com/wix-engineering/the-full-react-native-layout-cheat-sheet-a4147802405c) 에서 몇 가지 예제들을 볼 수 있습니다. 
