--- a/@docs-md/document/11_nativeComponents/1.md
+++ b/@docs-md/document/11_nativeComponents/1.md
@@ -1,1 +1,183 @@
+# Android 네이티브 UI 컴포넌트
 
+최신 앱에서 사용할 수 있는 수많은 기본 UI 위젯이 있습니다. 그 중 일부는 플랫폼에 속해 있으며, 다른 일부는 서드파티 라이브러리로 사용이 가능하지만, 대부분의 위젯이 자체 포트폴리오에서 사용될 수 있습니다. React Native는 `ScrollView`, `TextInput` 과 같이 이미 래핑된 대부분의 핵심적인 플랫폼 컴포넌트들을 일부 가지고 있습니다. 그러나 이전 앱에서 직접 작성한 컴포넌트 등 일부 컴포넌트는 React Native에 포함되어 있지 않습니다.  다행히 이러한 기존 컴포넌트를 React Native 애플리케이션과 매끄럽게 통합할 수 있습니다. 
+
+이 가이드는 네이티브 모듈 가이드와 마찬가지로, Android SDK 프로그래밍에 능숙한 개발자를 대상으로 하는 고급 가이드입니다. 이 가이드에서는 코어 React Native 라이브러리에서 사용할 수 있는 기존의 `ImageView` 컴포넌트의 하위를 일부 구현해봄으로써, 네이티브 UI 컴포넌트를 빌드하는 방법에 대해 알아봅니다. 
+
+## ImageView 예제
+
+이 예제에서는 JavaScript에서 ImageView를 사용하기 위한 구현 요구사항을 살펴보겠습니다. 
+
+네이티브 뷰는 `ViewManager` 또는 `SimpleViewManager` (`SimpleViewManager` 가 좀 더 일반적) 를 확장해 생성 및 조작됩니다. 이 경우, `SimpleViewManager`가 배경 색상, 불투명도, Flexbox 레이아웃과 같은 공통 속성을 적용하기 때문에 편리합니다.  
+
+이러한 하위 클래스는 기본적으로 싱글톤(브리지에 의해 각각 하나의 인스턴스만 생성되는 것을 말함)이며, `NativeViewHierarchyManager`에 네이티브 뷰를 전달합니다. `ViewManagers` 는 일반적으로 뷰를 대신해 브릿지를 통해 JavaScript로 이벤트를 다시 전송합니다. 
+
+뷰를 전송하려면: 
+
+1. ViewManager 하위 클래스를 생성합니다. 
+2. `createViewInstance` 메소드를 구현합니다. 
+3. `@ReactProp` (또는 `@ReactPropGroup`) 어노테이션을 사용해 뷰 프로퍼티 설정자(setter)를 expose합니다. 
+4. 애플리케이션 패키지의 `createViewManagers`에 뷰 매니저를 등록합니다. 
+5. JavaScript 모듈을 구현합니다. 
+
+## 1. `ViewManager` 하위클래스 생성하기
+
+다음 예제에서는, `ReactImageView` 타입의 `SimpleViewManager` 를 확장하는 뷰 매니저 클래스 `ReactImageManager` 를 생성합니다. `ReactImageView` 는 매니저가 관리하는 객체 타입이며, 사용자 정의 네이티브 뷰가 됩니다. `getName` 에서 반환된 이름은 JavaScript에서 네이티브 뷰 타입을 참조하는 데 사용됩니다. 
+
+```java
+...
+
+public class ReactImageManager extends SimpleViewManager<ReactImageView> {
+
+  public static final String REACT_CLASS = "RCTImageView";
+  ReactApplicationContext mCallerContext;
+
+  public ReactImageManager(ReactApplicationContext reactContext) {
+    mCallerContext = reactContext;
+  }
+
+  @Override
+  public String getName() {
+    return REACT_CLASS;
+  }
+```
+
+## 2. `createViewInstance` 메소드 구현하기
+
+뷰는 `createViewInstance` 메소드 안에서 생성됩니다. 생성된 뷰는 기본 상태로 스스로 초기화되어야 하며, 모든 속성은 `updateView` 후속 호출을 통해 설정됩니다. 
+
+```java
+  @Override
+  public ReactImageView createViewInstance(ThemedReactContext context) {
+    return new ReactImageView(context, Fresco.newDraweeControllerBuilder(), null, mCallerContext);
+  }
+```
+
+## 3. `@ReactProp` (또는 `@ReactPropGroup`) 사용해 뷰 프로퍼티 설정자(Setter) Expose하기
+
+JavaScript에 반영될 속성은 `@ReactProp` (또는 `@ReactPropGroup`) 어노테이션이 달린 setter 메소드로 노출되어야 합니다. Setter 메소드는 뷰를 첫 번째 인자로 받아서 현재 뷰 타입을 업데이트하고, 속성 값을 두 번째 인자로 받습니다. Setter는 `void` 메소드로 선언되어야 하고, `public` 이어야 합니다. JS로 보내지는 속성 타입은 setter의 인자 값 타입에 따라 자동으로 결정됩니다. 현재 지원되는 타입은 `boolean`, `int`, `float`, `double`, `String`, `Boolean`, `Integer`, `ReadableArray`, `ReadableMap` 입니다. 
+
+`@ReactProp` 어노테이션은 `String` 타입의 `name` 인자 하나를 필수로 가집니다. Setter 메소드에 연결되는  `@ReactProp` 어노테이션에 할당된 이름은 JS 측에서 속성을 참조하는 데에 사용됩니다. 
+
+`name`, `@ReactProp` 어노테이션은  `defaultBoolean`, `defaultInt`, `defaultFloat` 인자를 옵션으로 받을 수 있습니다. 이 인자들의 타입은 각각 `boolean`, `int`, `float` 이어야 하며, setter가 참조하는 속성이 컴포넌트에서 제거된 경우, 이 인자들을 통해 제공된 값이 setter 메소드에 전달됩니다. 기본값은 원시 타입에 대해서만 제공되며, setter가 복합 타입(complex type)인 경우, 해당하는 속성이 제거되었을 때 기본값으로 `null`이 제공됩니다.  
+
+Setter declaration requirements for methods annotated with `@ReactPropGroup` are different than for `@ReactProp`, please refer to the `@ReactPropGroup` annotation class docs for more information about it. **IMPORTANT!** in ReactJS updating the property value will result in setter method call. Note that one of the ways we can update component is by removing properties that have been set before. In that case setter method will be called as well to notify view manager that property has changed. In that case "default" value will be provided (for primitive types "default" can value can be specified using `defaultBoolean`, `defaultFloat`, etc. arguments of `@ReactProp` annotation, for complex types setter will be called with value set to `null`).
+
+```java
+  @ReactProp(name = "src")
+  public void setSrc(ReactImageView view, @Nullable ReadableArray sources) {
+    view.setSource(sources);
+  }
+
+  @ReactProp(name = "borderRadius", defaultFloat = 0f)
+  public void setBorderRadius(ReactImageView view, float borderRadius) {
+    view.setBorderRadius(borderRadius);
+  }
+
+  @ReactProp(name = ViewProps.RESIZE_MODE)
+  public void setResizeMode(ReactImageView view, @Nullable String resizeMode) {
+    view.setScaleType(ImageResizeMode.toScaleType(resizeMode));
+  }
+```
+
+## 4. Register the `ViewManager`[#](https://reactnative.dev/docs/native-components-android#4-register-the-viewmanager)
+
+The final Java step is to register the ViewManager to the application, this happens in a similar way to [Native Modules](https://reactnative.dev/docs/native-modules-android), via the applications package member function `createViewManagers.`
+
+```java
+  @Override
+  public List<ViewManager> createViewManagers(
+                            ReactApplicationContext reactContext) {
+    return Arrays.<ViewManager>asList(
+      new ReactImageManager(reactContext)
+    );
+  }
+```
+
+## 5. Implement the JavaScript module[#](https://reactnative.dev/docs/native-components-android#5-implement-the-javascript-module)
+
+The very final step is to create the JavaScript module that defines the interface layer between Java and JavaScript for the users of your new view. It is recommended for you to document the component interface in this module (e.g. using Flow, TypeScript, or plain old comments).
+
+```js
+// ImageView.js
+
+import { requireNativeComponent } from 'react-native';
+
+/**
+ * Composes `View`.
+ *
+ * - src: string
+ * - borderRadius: number
+ * - resizeMode: 'cover' | 'contain' | 'stretch'
+ */
+module.exports = requireNativeComponent('RCTImageView');
+```
+
+The `requireNativeComponent` function takes the name of the native view. Note that if your component needs to do anything more sophisticated (e.g. custom event handling), you should wrap the native component in another React component. This is illustrated in the `MyCustomView` example below.
+
+# Events[#](https://reactnative.dev/docs/native-components-android#events)
+
+So now we know how to expose native view components that we can control freely from JS, but how do we deal with events from the user, like pinch-zooms or panning? When a native event occurs the native code should issue an event to the JavaScript representation of the View, and the two views are linked with the value returned from the `getId()` method.
+
+```java
+class MyCustomView extends View {
+   ...
+   public void onReceiveNativeEvent() {
+      WritableMap event = Arguments.createMap();
+      event.putString("message", "MyMessage");
+      ReactContext reactContext = (ReactContext)getContext();
+      reactContext.getJSModule(RCTEventEmitter.class).receiveEvent(
+          getId(),
+          "topChange",
+          event);
+    }
+}
+```
+
+To map the `topChange` event name to the `onChange` callback prop in JavaScript, register it by overriding the `getExportedCustomBubblingEventTypeConstants` method in your `ViewManager`:
+
+```java
+public class ReactImageManager extends SimpleViewManager<MyCustomView> {
+    ...
+    public Map getExportedCustomBubblingEventTypeConstants() {
+        return MapBuilder.builder()
+            .put(
+                "topChange",
+                MapBuilder.of(
+                    "phasedRegistrationNames",
+                    MapBuilder.of("bubbled", "onChange")))
+                    .build();
+    }
+}
+```
+
+This callback is invoked with the raw event, which we typically process in the wrapper component to make a simpler API:
+
+```js
+// MyCustomView.js
+
+class MyCustomView extends React.Component {
+  constructor(props) {
+    super(props);
+    this._onChange = this._onChange.bind(this);
+  }
+  _onChange(event: Event) {
+    if (!this.props.onChangeMessage) {
+      return;
+    }
+    this.props.onChangeMessage(event.nativeEvent.message);
+  }
+  render() {
+    return <RCTMyCustomView {...this.props} onChange={this._onChange} />;
+  }
+}
+MyCustomView.propTypes = {
+  /**
+   * Callback that is called continuously when the user is dragging the map.
+   */
+  onChangeMessage: PropTypes.func,
+  ...
+};
+
+var RCTMyCustomView = requireNativeComponent(`RCTMyCustomView`);
+```
