--- a/@docs-md/document/11_nativeComponents/1.md
+++ b/@docs-md/document/11_nativeComponents/1.md
@@ -61,7 +61,7 @@ JavaScript에 반영될 속성은 `@ReactProp` (또는 `@ReactPropGroup`) 어노
 
 `name`, `@ReactProp` 어노테이션은  `defaultBoolean`, `defaultInt`, `defaultFloat` 인자를 옵션으로 받을 수 있습니다. 이 인자들의 타입은 각각 `boolean`, `int`, `float` 이어야 하며, setter가 참조하는 속성이 컴포넌트에서 제거된 경우, 이 인자들을 통해 제공된 값이 setter 메소드에 전달됩니다. 기본값은 원시 타입에 대해서만 제공되며, setter가 복합 타입(complex type)인 경우, 해당하는 속성이 제거되었을 때 기본값으로 `null`이 제공됩니다.  
 
-Setter declaration requirements for methods annotated with `@ReactPropGroup` are different than for `@ReactProp`, please refer to the `@ReactPropGroup` annotation class docs for more information about it. **IMPORTANT!** in ReactJS updating the property value will result in setter method call. Note that one of the ways we can update component is by removing properties that have been set before. In that case setter method will be called as well to notify view manager that property has changed. In that case "default" value will be provided (for primitive types "default" can value can be specified using `defaultBoolean`, `defaultFloat`, etc. arguments of `@ReactProp` annotation, for complex types setter will be called with value set to `null`).
+`@ReactPropGroup` 어노테이션이 달린 메소드의 Setter 선언 조건은 `@ReactProp` 의 경우와 다릅니다. 자세한 내용은 `@ReactPropGroup` 어노테이션 클래스 문서를 참조하십시오. **중요!** ReactJS에서 속성 값을 업데이트하면 setter 메소드가 호출됩니다. 컴포넌트를 업데이트할 수 있는 방법 중 하나는, 이전에 설정된 속성을 제거하는 것입니다. 이 경우 setter 메소드도 호출되어 뷰 매니저에게 속성이 변경되었음을 알리게 되며, 기본값이 제공됩니다. (원시 타입의 경우 `defaultBoolean`, `defaultFloat` 등을 사용해 기본값이 지정되며, 복합 타입의 경우 `null` 로 설정된 값과 함께 setter 메소드가 호출됩니다. )
 
 ```java
   @ReactProp(name = "src")
@@ -80,9 +80,9 @@ Setter declaration requirements for methods annotated with `@ReactPropGroup` are
   }
 ```
 
-## 4. Register the `ViewManager`[#](https://reactnative.dev/docs/native-components-android#4-register-the-viewmanager)
+## 4. `ViewManager` 등록하기
 
-The final Java step is to register the ViewManager to the application, this happens in a similar way to [Native Modules](https://reactnative.dev/docs/native-modules-android), via the applications package member function `createViewManagers.`
+Java에서의 마지막 단계는, 애플리케이션에 ViewManager를 등록하는 것입니다. 이는 애플리케이션 패키지 멤버 함수인 `createViewManagers` 를 통해서 [네이티브 모듈](https://reactnative.dev/docs/native-modules-android)과 비슷한 방식으로 이루어집니다. 
 
 ```java
   @Override
@@ -94,9 +94,9 @@ The final Java step is to register the ViewManager to the application, this happ
   }
 ```
 
-## 5. Implement the JavaScript module[#](https://reactnative.dev/docs/native-components-android#5-implement-the-javascript-module)
+## 5. JavaScript 모듈 구현하기
 
-The very final step is to create the JavaScript module that defines the interface layer between Java and JavaScript for the users of your new view. It is recommended for you to document the component interface in this module (e.g. using Flow, TypeScript, or plain old comments).
+마지막으로, 새로운 뷰의 사용자를 위한 Java와 JavaScript 간의 인터페이스 계층을 정의하는 JavaScript 모듈을 생성합니다. 이 모듈의 컴포넌트 인터페이스를 문서화하는 것이 좋습니다. (예: Flow, TypeScript, 일반 주석 사용)
 
 ```js
 // ImageView.js
@@ -113,11 +113,11 @@ import { requireNativeComponent } from 'react-native';
 module.exports = requireNativeComponent('RCTImageView');
 ```
 
-The `requireNativeComponent` function takes the name of the native view. Note that if your component needs to do anything more sophisticated (e.g. custom event handling), you should wrap the native component in another React component. This is illustrated in the `MyCustomView` example below.
+`requireNativeComponent` 함수는 네이티브 뷰의 이름을 사용합니다. 컴포넌트가 더 정교한 작업 (예: 사용자 정의 이벤트 처리)을 해야 하는 경우, 네이티브 컴포넌트를 다른 React 컴포넌트로 감싸야 합니다. 이는 아래의 `MyCustomView` 예제에서 확인할 수 있습니다. 
 
-# Events[#](https://reactnative.dev/docs/native-components-android#events)
+# 이벤트
 
-So now we know how to expose native view components that we can control freely from JS, but how do we deal with events from the user, like pinch-zooms or panning? When a native event occurs the native code should issue an event to the JavaScript representation of the View, and the two views are linked with the value returned from the `getId()` method.
+이제 JS에서 자유롭게 사용할 수 있는 네이티브 뷰 컴포넌트를 expose하는 방법을 알게 되었습니다. 그런데 pinch-zoom이나 panning과 같이 사용자로부터 발생하는 이벤트는 어떻게 처리해야 할까요? 네이티브 이벤트가 발생하면, 네이티브 코드는 해당 뷰를 나타내는 JavaScript 코드로 이벤트를 발행해야 하며, 두 개의 뷰가 `getId()` 메소드에서 반환받은 값으로 연결되어야 합니다. 
 
 ```java
 class MyCustomView extends View {
@@ -134,7 +134,7 @@ class MyCustomView extends View {
 }
 ```
 
-To map the `topChange` event name to the `onChange` callback prop in JavaScript, register it by overriding the `getExportedCustomBubblingEventTypeConstants` method in your `ViewManager`:
+JavaScript에서 `topChange` 이벤트 이름을 `onChange` 콜백 prop에 매핑하려면, `ViewManager` 에서 `getExportedCustomBubblingEventTypeConstants` 메소드를 재정의하여 등록하십시오. 
 
 ```java
 public class ReactImageManager extends SimpleViewManager<MyCustomView> {
@@ -151,7 +151,7 @@ public class ReactImageManager extends SimpleViewManager<MyCustomView> {
 }
 ```
 
-This callback is invoked with the raw event, which we typically process in the wrapper component to make a simpler API:
+이 콜백은 원시 이벤트(더 간단한 API를 만들기 위해 일반적으로 wrapper 컴포넌트 안에서 처리되는)와 함께 호출됩니다. 
 
 ```js
 // MyCustomView.js
@@ -181,3 +181,4 @@ MyCustomView.propTypes = {
 
 var RCTMyCustomView = requireNativeComponent(`RCTMyCustomView`);
 ```
+
