update native components > 2.md (translating...)

--- a/@docs-md/document/11_nativeComponents/2.md
+++ b/@docs-md/document/11_nativeComponents/2.md
@@ -1,12 +1,13 @@
-# iOS Native UI Components
+# iOS 네이티브 UI 컴포넌트
 
-There are tons of native UI widgets out there ready to be used in the latest apps - some of them are part of the platform, others are available as third-party libraries, and still more might be in use in your very own portfolio. React Native has several of the most critical platform components already wrapped, like `ScrollView` and `TextInput`, but not all of them, and certainly not ones you might have written yourself for a previous app. Fortunately, we can wrap up these existing components for seamless integration with your React Native application.
+최신 앱에서 사용할 수 있는 수많은 기본 UI 위젯이 있습니다. 그 중 일부는 플랫폼에 속해 있으며, 다른 일부는 서드파티 라이브러리로 사용이 가능하지만, 대부분의 위젯이 자체 포트폴리오에서 사용될 수 있습니다. React Native는 `ScrollView`, `TextInput` 과 같이 이미 래핑된 대부분의 핵심적인 플랫폼 컴포넌트들을 일부 가지고 있습니다. 그러나 이전 앱에서 직접 작성한 컴포넌트 등 일부 컴포넌트는 React Native에 포함되어 있지 않습니다. 다행히 이러한 기존 컴포넌트를 React Native 애플리케이션과 매끄럽게 통합할 수 있습니다. 
 
-Like the native module guide, this too is a more advanced guide that assumes you are somewhat familiar with iOS programming. This guide will show you how to build a native UI component, walking you through the implementation of a subset of the existing `MapView` component available in the core React Native library.
+이 가이드는 네이티브 모듈 가이드와 마찬가지로, iOS 프로그래밍에 능숙한 개발자를 대상으로 하는 고급 가이드입니다. 이 가이드에서는 코어 React Native 라이브러리에서 사용할 수 있는 기존의 `MapView` 컴포넌트의 하위를 일부 구현해봄으로써, 네이티브 UI 컴포넌트를 빌드하는 방법에 대해 알아봅니다. 
 
-## iOS MapView example[#](https://reactnative.dev/docs/native-components-ios#ios-mapview-example)
+## iOS MapView 예제
 
 Let's say we want to add an interactive Map to our app - might as well use [`MKMapView`](https://developer.apple.com/library/prerelease/mac/documentation/MapKit/Reference/MKMapView_Class/index.html), we only need to make it usable from JavaScript.
+앱에 동적인 Map을 추가한다고 가정해봅시다. [MKMapView]((https://developer.apple.com/library/prerelease/mac/documentation/MapKit/Reference/MKMapView_Class/index.html)) 를 사용하는 경우, JavaScript에서만 사용할 수 있으면 됩니다. 
 
 Native views are created and manipulated by subclasses of `RCTViewManager`. These subclasses are similar in function to view controllers, but are essentially singletons - only one instance of each is created by the bridge. They expose native views to the `RCTUIManager`, which delegates back to them to set and update the properties of the views as necessary. The `RCTViewManager`s are also typically the delegates for the views, sending events back to JavaScript via the bridge.
 
@@ -37,7 +38,7 @@ RCT_EXPORT_MODULE(RNTMap)
 @end
 ```
 
-**Note:** Do not attempt to set the `frame` or `backgroundColor` properties on the `UIView`instance that you expose through the `-view` method. React Native will overwrite the values set by your custom class in order to match your JavaScript component's layout props. If you need this granularity of control it might be better to wrap the `UIView`instance you want to style in another `UIView` and return the wrapper `UIView` instead. See [Issue 2948](https://github.com/facebook/react-native/issues/2948) for more context.
+**참고:** Do not attempt to set the `frame` or `backgroundColor` properties on the `UIView`instance that you expose through the `-view` method. React Native will overwrite the values set by your custom class in order to match your JavaScript component's layout props. If you need this granularity of control it might be better to wrap the `UIView`instance you want to style in another `UIView` and return the wrapper `UIView` instead. See [Issue 2948](https://github.com/facebook/react-native/issues/2948) for more context.
 
 > In the example above, we prefixed our class name with `RNT`. Prefixes are used to avoid name collisions with other frameworks. Apple frameworks use two-letter prefixes, and React Native uses `RCT` as a prefix. In order to avoid name collisions, we recommend using a three-letter prefix other than `RCT` in your own classes.
 
@@ -64,7 +65,7 @@ render() {
 
 Make sure to use `RNTMap` here. We want to require the manager here, which will expose the view of our manager for use in JavaScript.
 
-**Note:** When rendering, don't forget to stretch the view, otherwise you'll be staring at a blank screen.
+**참고:** When rendering, don't forget to stretch the view, otherwise you'll be staring at a blank screen.
 
 ```jsx
   render() {
@@ -74,7 +75,7 @@ Make sure to use `RNTMap` here. We want to require the manager here, which will 
 
 This is now a fully-functioning native map view component in JavaScript, complete with pinch-zoom and other native gesture support. We can't really control it from JavaScript yet, though :(
 
-## Properties
+## 속성 (Properties)
 
 The first thing we can do to make this component more usable is to bridge over some native properties. Let's say we want to be able to disable zooming and specify the visible region. Disabling zoom is a boolean, so we add this one line:
 
