--- a/@docs-md/document/11_nativeComponents/2.md
+++ b/@docs-md/document/11_nativeComponents/2.md
@@ -6,16 +6,16 @@
 
 ## iOS MapView 예제
 
-Let's say we want to add an interactive Map to our app - might as well use [`MKMapView`](https://developer.apple.com/library/prerelease/mac/documentation/MapKit/Reference/MKMapView_Class/index.html), we only need to make it usable from JavaScript.
-앱에 동적인 Map을 추가한다고 가정해봅시다. [MKMapView]((https://developer.apple.com/library/prerelease/mac/documentation/MapKit/Reference/MKMapView_Class/index.html)) 를 사용하는 경우, JavaScript에서만 사용할 수 있으면 됩니다. 
+앱에 동적인 Map을 추가한다고 가정해봅시다. (JavaScript에서만 사용하는 경우, [MKMapView](https://developer.apple.com/library/prerelease/mac/documentation/MapKit/Reference/MKMapView_Class/index.html)를 사용하는 편이 낫습니다. 
 
-Native views are created and manipulated by subclasses of `RCTViewManager`. These subclasses are similar in function to view controllers, but are essentially singletons - only one instance of each is created by the bridge. They expose native views to the `RCTUIManager`, which delegates back to them to set and update the properties of the views as necessary. The `RCTViewManager`s are also typically the delegates for the views, sending events back to JavaScript via the bridge.
+네이티브 뷰는 `RCTViewManager` 의 하위 클래스에서 생성 및 조작됩니다. 이러한 하위 클래스는 뷰 컨트롤러 함수들과 유사하지만 기본적으로 싱글톤이므로, 브리지에서 각각 하나의 인스턴스만 생성됩니다. 이들은 네이티브 뷰를 `RCTUIManager` 로 expose하고, 이를 다시 위임하여 필요에 따라 뷰의 속성을 설정 및 업데이트합니다. `RCTViewManager` 는 일반적으로 뷰를 대신해 브릿지를 통해 JavaScript로 이벤트를 다시 전송합니다. 
 
-To expose a view you can:
+뷰를 expose하려면 다음과 같이 할 수 있습니다. 
 
-- Subclass `RCTViewManager` to create a manager for your component.
-- Add the `RCT_EXPORT_MODULE()` marker macro.
-- Implement the `-(UIView *)view` method.
+- 컴포넌트의 매니저를 생성하기 위해 `RCTViewManager` 하위 클래스를 생성합니다. 
+- `RCT_EXPORT_MODULE()` 마커 매크로를 추가합니다. 
+- `-(UIView *)view` 메소드를 구현합니다. 
+
 
 ```swift
 // RNTMapManager.m
@@ -38,11 +38,11 @@ RCT_EXPORT_MODULE(RNTMap)
 @end
 ```
 
-**참고:** Do not attempt to set the `frame` or `backgroundColor` properties on the `UIView`instance that you expose through the `-view` method. React Native will overwrite the values set by your custom class in order to match your JavaScript component's layout props. If you need this granularity of control it might be better to wrap the `UIView`instance you want to style in another `UIView` and return the wrapper `UIView` instead. See [Issue 2948](https://github.com/facebook/react-native/issues/2948) for more context.
+**참고:** `-view` 메소드를 통해 노출시킨 `UIView` 인스턴스에서 `frame` 또는 `backgroundColor` 속성을 설정하지 마십시오. React Native는 JavaScript 컴포넌트의 레이아웃 속성에 일치하도록, 사용자 정의 클래스에서 설정한 값을 덮어씌웁니다. 이 정도 수준의 제어가 필요하다면, 다른 `UIView` 에서 스타일링하고 싶은 `UIView` 인스턴스를 래핑하고, wrapper `UIView` 를 댇신 반환하는 것이 더 나을 수 있습니다. 자세한 내용은 [Issue 2948](https://github.com/facebook/react-native/issues/2948)를 참조하세요. 
 
-> In the example above, we prefixed our class name with `RNT`. Prefixes are used to avoid name collisions with other frameworks. Apple frameworks use two-letter prefixes, and React Native uses `RCT` as a prefix. In order to avoid name collisions, we recommend using a three-letter prefix other than `RCT` in your own classes.
+> 위 예시에서, 다른 프레임워크와의 이름 충돌을 피하기 위해 클래스 이름에 `RNT` 접두사가 사용 되었습니다. Apple 프레임워크는 두 글자 접두사를 사용하고, React Native는 `RCT` 를 접두사로 사용합니다. 이름 충돌을 피하려면, 사용자 정의 클래스에서는 `RCT` 외의 세 글자 접두사를 사용하는 것이 좋습니다. 
 
-Then you need a little bit of JavaScript to make this a usable React component:
+다음으로, 이것을 React 컴포넌트로 사용할 수 있게 하기 위해 약간의 JavaScript 작업이 필요합니다. 
 
 ```jsx
 // MapView.js
@@ -64,6 +64,7 @@ render() {
 ```
 
 Make sure to use `RNTMap` here. We want to require the manager here, which will expose the view of our manager for use in JavaScript.
+여기에서 `RNTMap`을 사용하십시오. 
 
 **참고:** When rendering, don't forget to stretch the view, otherwise you'll be staring at a blank screen.
 
